--- a/stackoverflowlite/templates/navbarwelcomepage.html
+++ b/stackoverflowlite/templates/navbarwelcomepage.html
@@ -12,7 +12,7 @@
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item active">
                             <a class="nav-link btn btn-outline-info" href="{{url_for('Login')}}" >
-                                Login
+                                Log in
                             </a>
                         </li>
                         
@@ -21,5 +21,10 @@
                                 SignUp
                             </a>
                         </li>
+                        <li class="nav-item active">
+                                <a class="nav-link btn btn-outline-primary" href="{{url_for('welcome')}}" >
+                                    Homepage
+                                </a>
+                            </li>
                     </ul>
 </nav>
