--- a/stackoverflowlite/templates/login.html
+++ b/stackoverflowlite/templates/login.html
@@ -5,24 +5,43 @@
         <div>
             <img src="{{ url_for('static', filename='Join the team.gif')}}">
         </div>
-        <div>
+        <div class="form-group">
+
             <form action="" method="POST">
-               
-             <div>
-                 {{form.username.label}}
-                 {{form.username}}
-             </div>
-             
-             <div>
-                 {{form.password.label}}
-                 {{ form.password}}
-             </div>
-
-             <div>
-                 {{ form.submit }}
-             </div>
-
-            </form>
+                <legend> Log into your Stackoverflow Account <hr> </legend>
+                <div class="formitem">
+                    {{form.username.label(class="form-control-label")}}
+                    {% if form.username.errors %}
+                        {{form.username(class="form-control form-control-lg ")}}
+                        <div class="invalid-feedback">
+                            {% for error in form.username.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor%}
+                        </div>
+    
+                    {% else %}
+                        {{form.username(class="form-control form-control-lg")}}
+                    {% endif %}
+                </div>
+                <div class="formitem">
+                    {{form.password.label(class="form-control-label")}}
+                    {% if form.password.errors %}
+                        {{form.password(class="form-control form-control-lg ")}}
+                        <div class="invalid-feedback">
+                            {% for error in form.password.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor%}
+                        </div>
+    
+                    {% else %}
+                        {{form.password(class="form-control form-control-lg")}}
+                    {% endif %}
+                </div>
+                <div class="but">
+                    {{form.submit(class="btn btn-success")}}
+                </div>
+                </form>
+            </div>
         </div>
     </div>
 </div>
