--- a/stackoverflowlite/templates/welcome.html
+++ b/stackoverflowlite/templates/welcome.html
@@ -1,51 +1,45 @@
-<!DOCTYPE html>
-<html>
-<head>
+{% extends "welcomehome.html"%}
+{% block content %}
 
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Welcome to Stackover flow Lite</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="{{url_for('static', filename='bootstrap.css')}}" />
-    <link rel="stylesheet" type="text/css" media="screen" href="{{url_for('static', filename='mainwelcome.css')}}" />
-    <script src="main.js"></script>
-</head>
-
-<body>
-<div>
-
-{% include "navbarwelcomepage.html" %}
-</div>
-
-    <div>
-        {% include "flashmessages.html"%}
-        {%block content%}{% endblock %}
-        <img
-    </div>
-</body>
-<footer>
-    <div>
-        <ul class="listwrap">
-            <li class="listitem">
-                FAQS
-            </li>
-
-            <li class="listitem">
-                Twitter
-            </li>
-
-            <li class="listitem">
-                Youtube
-            </li>
-
-            <li class="listitem">
-                Email
-            </li>
-
-            <li class="listitem">
-                Privacy Policy
-            </li>
+<div id="slides" class="carousel slide" data-ride="carousel">
+        <ul class="carousel-indicators">
+            <li data-target="#slides" data-slide-to="0" class="active"></li>
+            <li data-target="#slides" data-slide-to="1"></li>
+            <li data-target="#slides" data-slide-to="2"></li>
         </ul>
+        
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="img-responsive image-resize" src="{{url_for('static', filename='imagetwo.png')}}">
+                <div class="carousel-caption">
+                    <h1 class="display-4">
+                        STACKOVER FLOW LITE
+                    </h1>
+                    <h3>
+                        We Will help you persue you Talent
+                    </h3>
+                    <a href="" class="btn btn-outline-info btn-xs">Learn more</a>
+                    <a href="{{url_for('SignUp')}}" class="btn btn-warning btn-md">GET STARTED</a>
+                </div>
+            </div>
+
+            <div class="carousel-item">
+                    <img class="img-responsive image-resize" src="{{url_for('static', filename='imagetwo.png')}}">
+                    <div class="carousel-caption">
+                            <h1 class="display-1">
+                                TOP PROGRAMMING LANGUAGES 2018-19
+                            </h1>
+                    </div>
+            </div>
+            <div class="carousel-item">
+                    <img  class="img-responsive image-resize" src="{{url_for('static', filename='imageone.jpg')}}">
+                    <div class="carousel-caption">
+                            <h1 class="display-1">
+                                THAT CODING EXPERIENCE
+                            </h1>
+                    </div>
+            </div>
+        </div>
     </div>
-</footer>
-</html>
+
+{% endblock content%}
