--- a/stackoverflowlite/templates/signup.html
+++ b/stackoverflowlite/templates/signup.html
@@ -1,6 +1,6 @@
 {%extends "welcome.html"%}
 {%block content%}
-<div class="firstwrapper">
+<div class="signwrapper">
     <div>
         <img src="{{ url_for('static', filename=('rocket.svg'))}}">
     </div>
