--- a/stackoverflowlite/static/mainwelcome.css
+++ b/stackoverflowlite/static/mainwelcome.css
@@ -17,9 +17,20 @@ li
 .firstwrapper
 {
     display: grid;
+    grid-template-columns: 20% 80%;
+    grid-column-gap: 40px;
+    justify-items: center;
+    padding-top: 30px;
+    padding-left: 100px;
+}
+.signwrapper
+{
+    display: grid;
     grid-template-rows: 10% 80%;
     grid-row-gap: 40px;
     justify-items: center;
+    padding-top: 30px;
+    padding-left: 100px;
 }
 
 .formitem
