--- a/stackoverflowlite/templates/Users.html
+++ b/stackoverflowlite/templates/Users.html
@@ -25,11 +25,10 @@
                 <li>
                     <a href="{{url_for('Profile')}}" class="listitem3">Your Profile</a>
                 </li>
+                <li>
+                    <h4 class="card minibox">Learn More</h4>
+                </li>
             </ul>
-
-            <div class="card minibox">
-                <h4>Learn More</h4>
-            </div>
         </div>
     </div>
     
