--- a/stackoverflowlite/templates/deletequestion.html
+++ b/stackoverflowlite/templates/deletequestion.html
@@ -26,13 +26,14 @@
                     <a href="{{url_for('Profile')}}" class="listitem3">Your Profile</a>
                 </li>
                 <li>
-                    <h4 class="card minibox">Learn More</h4>
+                    <h4 class="card minibox">Learn more</h4>
                 </li>
             </ul>
         </div>
+            <div class="userquestions">
+                <h1>{{questions.Title}}</h1>
+            </div>          
     </div>
-    
 </body>
     {%include "footerhomepage.html"%}
-
 </html>
