--- a/stackoverflowlite/templates/login.html
+++ b/stackoverflowlite/templates/login.html
@@ -39,7 +39,7 @@
                 </div>
                 <div class="but">
                     {{form.submit(class="btn btn-success")}}
-                    <small>Do not have account click <a href="{{url_for('SignUp')}}">here</a></small>
+                    <small>Do not have account click <a href="{{url_for('SignUp')}}" class="here">here</a></small>
                 </div>
                 </form>
             </div>
