--- a/stackoverflowlite/templates/signup.html
+++ b/stackoverflowlite/templates/signup.html
@@ -130,7 +130,7 @@
                 </div>
             <div>
                 {{form.submit(class="btn btn-success")}}
-                <small>Already have an account click <a href="Login">here</a></small>
+                <small>Already have an account click <a href="Login" class="here">here</a></small>
             </div>
         </form>
     </div>
