--- a/stackoverflowlite/templates/welcomehome.html
+++ b/stackoverflowlite/templates/welcomehome.html
@@ -23,29 +23,55 @@
 </body>
 
 <footer>
+<div class="ninthwrapper">
     <div>
-        <ul class="listwrap">
-            <li class="listitem">
-                FAQS
-            </li>
+        <img class="image" src="{{url_for('static', filename='stacklite.png')}}">
+        <hr class="light">
+        <p>
+            About
+        </p>
 
-            <li class="listitem">
-                Twitter
-            </li>
+        <p>
+            How to use
+        </p>
 
-            <li class="listitem">
-                Youtube
-            </li>
+        <p>
+            Terms of service
+        </p>
+    </div>
 
-            <li class="listitem">
-                Email
-            </li>
+    <div>
 
-            <li class="listitem">
-                Privacy Policy
-            </li>
-        </ul>
+        <p>
+            <hr>Created by Kodek2000 <hr> 
+        </p>
+
+        <p>
+            Africell money-0794583491
+        </p>
+        <p>
+            Mugerwa Joseph Lumu @facebook
+        </p>
+        <p>
+            Whatsapp-0775644211
+        </p>
+    </div>
+
+        <div>
+            <p>
+                <hr>Menu<hr>
+            </p>
+            <p>
+                <a href="{{url_for('Login')}}">Login</a>
+            </p>
+            <p>
+                <a href="{{url_for('SignUp')}}">SignUp</a>
+            </p>
+            <p>
+                <a href="{{url_for('welcome')}}">Homepage</a>
+            </p>
+        </div>
     </div>
 </footer>
-
+</body>
 </html>
